<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <Button
        android:id="@+id/logIn_btm"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_hint"
        android:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/button_sigIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInPass"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="visible"/>

    <EditText
        android:id="@+id/logInPass"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logInName"
        android:visibility="visible"/>

    <EditText
        android:id="@+id/logInName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sigIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/sigin_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logIn_btm"
        android:visibility="visible"/>

    <EditText
        android:id="@+id/sigInPass"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInName" />

    <EditText
        android:id="@+id/sigInPhone"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="phone|number"
        android:hint="@string/phone_hint"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sigInPass" />

    <EditText
        android:id="@+id/sigInEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sigInPhone"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/SigInAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/address_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/sigInEmail" />

    <ImageView
        android:id="@+id/SigInImg"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/logInName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher" 
        tools:srcCompat="@tools:sample/avatars"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/returnBtm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="#DE2424"
        android:text="@string/return_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sigIn"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>